# SmartDocs-Multi-Document-Chat-using-LLMOps

./: .gitignore  pyproject.toml  requirements.txt  test.py
data/: Q&A.csv
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: exception.py
multi_doc_chat/logger/: logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_chat/: retrieval.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  document_ops.py  file_io.py  model_loader.py
notebook/: evaluation.ipynb  experiments.ipynb  rag.ipynb
