[project]
name = "smartdocs-multi-document-chat-using-llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.0",
    "groq>=0.33.0",
    "ipykernel>=7.0.1",
    "jinja2>=3.1.6",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "langsmith>=0.4.38",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pypdf>=6.1.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "structlog>=25.4.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
